# vimerbflyio-core-api-imgproc-poc

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.sample
src/: config.rs  db.rs  main.rs  metrics.rs  routes.rs
src/handlers/: health.rs  image.rs  mod.rs
src/libs/helpers/: upload_helpers.rs
src/middleware/: api_key.rs
src/models/: image.rs
src/tests/handlers/: health.rs  image.rs
src/tests/middleware/: api_key.rs
